--- a/VisualC++/ONSlaught-win32/ONSlaught-win32.vcproj
+++ b/VisualC++/ONSlaught-win32/ONSlaught-win32.vcproj
@@ -118,6 +118,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="3"
 				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
 				AdditionalIncludeDirectories="../../include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;NONS_SVN"
 				RuntimeLibrary="0"
@@ -138,7 +139,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="freetype.lib libbz2.lib SDL.lib SDL_image.lib SDL_mixer.lib smpeg.lib"
+				AdditionalDependencies="freetype.lib libbz2.lib SDL.lib SDL_image.lib SDL_mixer.lib"
 				OutputFile="$(OutDir)\ONSlaught-win32-VC++.exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="../../lib-win32"
@@ -179,455 +180,126 @@
 		<Filter
 			Name="src"
 			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
-			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
-			<File
-				RelativePath="..\..\src\CommandLineOptions.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\CommandLineOptions.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\Common.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\CommonTypes.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\enums.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\ErrorCodes.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\Everything.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\Everything.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\Functions.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\Functions.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\Globals.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\Globals.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\ONSlaught.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\SJIS.table.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\ThreadManager.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\ThreadManager.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\UTF.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\UTF.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\src\version.h"
-				>
-			</File>
+<File RelativePath="..\..\src\CommandLineOptions.cpp"></File>
+<File RelativePath="..\..\src\Everything.cpp"></File>
+<File RelativePath="..\..\src\Functions.cpp"></File>
+<File RelativePath="..\..\src\Globals.cpp"></File>
+<File RelativePath="..\..\src\ONSlaught.cpp"></File>
+<File RelativePath="..\..\src\SJIS.table.cpp"></File>
+<File RelativePath="..\..\src\ThreadManager.cpp"></File>
+<File RelativePath="..\..\src\UTF.cpp"></File>
+<File RelativePath="..\..\src\CommandLineOptions.h"></File>
+<File RelativePath="..\..\src\Common.h"></File>
+<File RelativePath="..\..\src\CommonTypes.h"></File>
+<File RelativePath="..\..\src\ErrorCodes.h"></File>
+<File RelativePath="..\..\src\Everything.h"></File>
+<File RelativePath="..\..\src\Functions.h"></File>
+<File RelativePath="..\..\src\Globals.h"></File>
+<File RelativePath="..\..\src\ThreadManager.h"></File>
+<File RelativePath="..\..\src\UTF.h"></File>
+<File RelativePath="..\..\src\enums.h"></File>
+<File RelativePath="..\..\src\version.h"></File>
 			<Filter
 				Name="IO_System"
 				>
-				<File
-					RelativePath="..\..\src\IO_System\ConfigFile.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\IO_System\ConfigFile.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\IO_System\FileIO.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\IO_System\FileIO.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\IO_System\INIfile.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\IO_System\INIfile.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\IO_System\INIParser.tab.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\IO_System\INIParser.tab.hpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\IO_System\InputHandler.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\IO_System\InputHandler.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\IO_System\IOFunctions.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\IO_System\IOFunctions.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\IO_System\SaveFile.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\IO_System\SaveFile.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\IO_System\StdOut.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\IO_System\StdOut.h"
-					>
-				</File>
+<File RelativePath="..\..\src\IO_System\ConfigFile.cpp"></File>
+<File RelativePath="..\..\src\IO_System\FileIO.cpp"></File>
+<File RelativePath="..\..\src\IO_System\INIParser.tab.cpp"></File>
+<File RelativePath="..\..\src\IO_System\INIfile.cpp"></File>
+<File RelativePath="..\..\src\IO_System\IOFunctions.cpp"></File>
+<File RelativePath="..\..\src\IO_System\InputHandler.cpp"></File>
+<File RelativePath="..\..\src\IO_System\SaveFile.cpp"></File>
+<File RelativePath="..\..\src\IO_System\StdOut.cpp"></File>
+<File RelativePath="..\..\src\IO_System\ConfigFile.h"></File>
+<File RelativePath="..\..\src\IO_System\FileIO.h"></File>
+<File RelativePath="..\..\src\IO_System\INIParser.tab.hpp"></File>
+<File RelativePath="..\..\src\IO_System\INIfile.h"></File>
+<File RelativePath="..\..\src\IO_System\IOFunctions.h"></File>
+<File RelativePath="..\..\src\IO_System\InputHandler.h"></File>
+<File RelativePath="..\..\src\IO_System\SaveFile.h"></File>
+<File RelativePath="..\..\src\IO_System\StdOut.h"></File>
 				<Filter
 					Name="Audio"
 					>
-					<File
-						RelativePath="..\..\src\IO_System\Audio\Audio.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Audio\Audio.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Audio\CachedSound.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Audio\CachedSound.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Audio\Music.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Audio\Music.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Audio\SoundCache.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Audio\SoundCache.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Audio\SoundEffect.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Audio\SoundEffect.h"
-						>
-					</File>
+<File RelativePath="..\..\src\IO_System\Audio\Audio.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Audio\Audio.h"></File>
 				</Filter>
 				<Filter
 					Name="Graphics"
 					>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\Button.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\Button.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\ButtonLayer.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\ButtonLayer.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\Cursor.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\Cursor.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\FontCache.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\FontCache.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\GFX.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\GFX.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\Layer.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\Layer.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\Lookback.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\Lookback.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\Menu.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\Menu.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\ScreenSpace.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\ScreenSpace.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\SDL_bilinear.c"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\SDL_bilinear.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\SDL_ttf.c"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\SDL_ttf.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\StandardOutput.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\StandardOutput.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\VirtualScreen.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Graphics\VirtualScreen.h"
-						>
-					</File>
+<File RelativePath="..\..\src\IO_System\Graphics\Button.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\ButtonLayer.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\Cursor.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\FontCache.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\GFX.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\Layer.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\Lookback.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\Menu.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\SDL_bilinear.c"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\SDL_ttf.c"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\ScreenSpace.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\StandardOutput.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\VirtualScreen.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\Button.h"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\ButtonLayer.h"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\Cursor.h"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\FontCache.h"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\GFX.h"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\Layer.h"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\Lookback.h"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\Menu.h"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\SDL_bilinear.h"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\SDL_ttf.h"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\ScreenSpace.h"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\StandardOutput.h"></File>
+<File RelativePath="..\..\src\IO_System\Graphics\VirtualScreen.h"></File>
 				</Filter>
 				<Filter
 					Name="SAR"
 					>
-					<File
-						RelativePath="..\..\src\IO_System\SAR\Archive.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\SAR\Archive.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\SAR\Image_Loader\FileLog.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\SAR\Image_Loader\FileLog.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\SAR\Image_Loader\Image.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\SAR\Image_Loader\Image.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\SAR\Image_Loader\ImageLoader.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\SAR\Image_Loader\ImageLoader.h"
-						>
-					</File>
+<File RelativePath="..\..\src\IO_System\SAR\Archive.cpp"></File>
+<File RelativePath="..\..\src\IO_System\SAR\FileLog.cpp"></File>
+<File RelativePath="..\..\src\IO_System\SAR\Image.cpp"></File>
+<File RelativePath="..\..\src\IO_System\SAR\ImageLoader.cpp"></File>
+<File RelativePath="..\..\src\IO_System\SAR\Archive.h"></File>
+<File RelativePath="..\..\src\IO_System\SAR\FileLog.h"></File>
+<File RelativePath="..\..\src\IO_System\SAR\Image.h"></File>
+<File RelativePath="..\..\src\IO_System\SAR\ImageLoader.h"></File>
 				</Filter>
 				<Filter
 					Name="Script"
 					>
-					<File
-						RelativePath="..\..\src\IO_System\Script\commandPreParser.tab.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Script\commandPreParser.tab.hpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Script\MacroParser.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Script\MacroParser.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Script\MacroParser.tab.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Script\MacroParser.tab.hpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Script\Preprocessor.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Script\Script.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Script\Script.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Script\sha1.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\src\IO_System\Script\sha1.h"
-						>
-					</File>
+<File RelativePath="..\..\src\IO_System\Script\MacroParser.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Script\MacroParser.tab.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Script\Preprocessor.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Script\Script.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Script\commandPreParser.tab.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Script\sha1.cpp"></File>
+<File RelativePath="..\..\src\IO_System\Script\MacroParser.h"></File>
+<File RelativePath="..\..\src\IO_System\Script\MacroParser.tab.hpp"></File>
+<File RelativePath="..\..\src\IO_System\Script\Script.h"></File>
+<File RelativePath="..\..\src\IO_System\Script\commandPreParser.tab.hpp"></File>
+<File RelativePath="..\..\src\IO_System\Script\sha1.h"></File>
 				</Filter>
 			</Filter>
 			<Filter
 				Name="Processing"
 				>
-				<File
-					RelativePath="..\..\src\Processing\ExpressionParser.tab.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\Processing\ExpressionParser.tab.hpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\Processing\ParsedLine.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\Processing\ParsedLine.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\Processing\ScriptInterpreter.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\Processing\ScriptInterpreter.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\Processing\ScriptInterpreter_commandsAI.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\Processing\ScriptInterpreter_commandsJR.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\Processing\ScriptInterpreter_commandsSZ.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\Processing\ScriptInterpreter_savegame.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\Processing\Variable.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\Processing\Variable.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\Processing\VariableMember.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\Processing\VariableMember.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\Processing\VariableStore.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\src\Processing\VariableStore.h"
-					>
-				</File>
+<File RelativePath="..\..\src\Processing\ExpressionParser.tab.cpp"></File>
+<File RelativePath="..\..\src\Processing\ScriptInterpreter.cpp"></File>
+<File RelativePath="..\..\src\Processing\ScriptInterpreter_commandsAI.cpp"></File>
+<File RelativePath="..\..\src\Processing\ScriptInterpreter_commandsJR.cpp"></File>
+<File RelativePath="..\..\src\Processing\ScriptInterpreter_commandsSZ.cpp"></File>
+<File RelativePath="..\..\src\Processing\ScriptInterpreter_savegame.cpp"></File>
+<File RelativePath="..\..\src\Processing\Variable.cpp"></File>
+<File RelativePath="..\..\src\Processing\VariableMember.cpp"></File>
+<File RelativePath="..\..\src\Processing\VariableStore.cpp"></File>
+<File RelativePath="..\..\src\Processing\ExpressionParser.tab.hpp"></File>
+<File RelativePath="..\..\src\Processing\ScriptInterpreter.h"></File>
+<File RelativePath="..\..\src\Processing\Variable.h"></File>
+<File RelativePath="..\..\src\Processing\VariableMember.h"></File>
+<File RelativePath="..\..\src\Processing\VariableStore.h"></File>
 			</Filter>
 		</Filter>
 		<File
