--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -1,15 +1,11 @@
-cmake_minimum_required (VERSION 2.6) 
-project (onslaught)
+cmake_minimum_required (VERSION 2.4.7)
+project(onslaught)
 
 include_directories(include)
 
-set(EXECUTABLE_OUTPUT_PATH bin-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR})
+set(EXECUTABLE_OUTPUT_PATH .)
 set(CMAKE_BUILD_TYPE Release)
 add_definitions(-DNONS_SVN)
-
-if (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR MINGW OR MSYS OR CYGWIN)
-set(CMAKE_MODULE_LINKER_FLAGS ${CMAKE_MODULE_LINKER_FLAGS} -s)
-endif (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR MINGW OR MSYS OR CYGWIN)
 
 set(LIBS
 	${LIBS}
@@ -27,23 +23,17 @@ add_executable(ONSlaught
 	src/Globals.cpp
 	src/ONSlaught.cpp
 	src/SJIS.table.cpp
-	src/UTF.cpp
 	src/ThreadManager.cpp
+	src/UTF.cpp
 	src/IO_System/ConfigFile.cpp
 	src/IO_System/FileIO.cpp
-	src/IO_System/INIfile.cpp
 	src/IO_System/INIParser.tab.cpp
-	src/IO_System/InputHandler.cpp
+	src/IO_System/INIfile.cpp
 	src/IO_System/IOFunctions.cpp
+	src/IO_System/InputHandler.cpp
 	src/IO_System/SaveFile.cpp
 	src/IO_System/StdOut.cpp
 	src/IO_System/Audio/Audio.cpp
-	src/IO_System/Audio/CachedSound.cpp
-	src/IO_System/Audio/Music.cpp
-	src/IO_System/Audio/SoundCache.cpp
-	src/IO_System/Audio/SoundEffect.cpp
-	src/IO_System/Graphics/SDL_ttf.c
-	src/IO_System/Graphics/SDL_Bilinear.c
 	src/IO_System/Graphics/Button.cpp
 	src/IO_System/Graphics/ButtonLayer.cpp
 	src/IO_System/Graphics/Cursor.cpp
@@ -52,6 +42,8 @@ add_executable(ONSlaught
 	src/IO_System/Graphics/Layer.cpp
 	src/IO_System/Graphics/Lookback.cpp
 	src/IO_System/Graphics/Menu.cpp
+	src/IO_System/Graphics/SDL_bilinear.c
+	src/IO_System/Graphics/SDL_ttf.c
 	src/IO_System/Graphics/ScreenSpace.cpp
 	src/IO_System/Graphics/StandardOutput.cpp
 	src/IO_System/Graphics/VirtualScreen.cpp
@@ -59,11 +51,11 @@ add_executable(ONSlaught
 	src/IO_System/SAR/FileLog.cpp
 	src/IO_System/SAR/Image.cpp
 	src/IO_System/SAR/ImageLoader.cpp
-	src/IO_System/Script/commandPreParser.tab.cpp
 	src/IO_System/Script/MacroParser.cpp
 	src/IO_System/Script/MacroParser.tab.cpp
 	src/IO_System/Script/Preprocessor.cpp
 	src/IO_System/Script/Script.cpp
+	src/IO_System/Script/commandPreParser.tab.cpp
 	src/IO_System/Script/sha1.cpp
 	src/Processing/ExpressionParser.tab.cpp
 	src/Processing/ScriptInterpreter.cpp
